--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ package-lock.json
 
 # Build outputs
 android/
-ios/
+# (iOS deve ser versionado para o Appflow gerar o build)
+# ios/
 
 # IDE
 .idea/
