--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@capacitor/android": "^7.4.2",
     "@capacitor/assets": "^3.0.5",
-    "@capacitor/cli": "^7.4.2"
+    "@capacitor/cli": "^7.4.2",
+    "@capacitor/ios": "^7.4.4"
   }
 }
