Revert to stable version and remove documentation files

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -3,8 +3,7 @@
   "appName": "ShapeFit",
   "webDir": "www",
   "server": {
-    "androidScheme": "https",
-    "iosScheme": "https"
+    "androidScheme": "https"
   },
   "android": {
     "allowMixedContent": false,
