feat: Implementação de navegação SPA suave (Pseudo-SPA) e correções de transição para eliminar white flash

--- a/www/manifest.json
+++ b/www/manifest.json
@@ -2,7 +2,7 @@
   "name": "ShapeFIT - Seu Personal Trainer",
   "short_name": "ShapeFIT",
   "description": "Aplicativo completo de fitness e nutrição",
-  "start_url": "/login.html",
+  "start_url": "/auth/login.html",
   "scope": "/",
   "display": "standalone",
   "background_color": "#101010",
