Adiciona Live Reload para desenvolvimento no iPhone
- Cria scripts start-dev.ps1 e stop-dev.ps1 para facilitar desenvolvimento
- Configura Capacitor para usar servidor HTTP local durante desenvolvimento
- Adiciona documentação completa em LIVE-RELOAD-SETUP.md
- Corrige carregamento de dados via SPA em content.html e favorite_recipes.html
- Adiciona listeners spa-page-loaded em todas as páginas principais
- Adiciona scripts npm run dev e npm run dev:stop para facilitar uso

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -4,6 +4,9 @@
   "webDir": "www",
   "server": {
     "androidScheme": "https"
+    // Para Live Reload durante desenvolvimento, descomente e configure seu IP:
+    // "url": "http://SEU_IP_AQUI:8100",
+    // "cleartext": true
   },
   "android": {
     "allowMixedContent": false,
