Adiciona servidor Node.js com suporte a SPA routing
- Cria serve.js com fallback para index.html
- Todas as rotas que não são arquivos físicos redirecionam para index.html
- Resolve problema de 404 ao dar refresh em rotas SPA
- Mantém compatibilidade com arquivos estáticos

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "generate:assets": "npx capacitor-assets generate",
     "dev": "powershell -ExecutionPolicy Bypass -File start-dev.ps1",
     "dev:stop": "powershell -ExecutionPolicy Bypass -File stop-dev.ps1",
-    "serve": "npx http-server www -p 8100 -c-1 --cors"
+    "serve": "node serve.js"
   },
   "dependencies": {
     "@capacitor-mlkit/barcode-scanning": "^7.3.0",
